# ShadowCorr

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
checkpoints/: shadowcorr_best.pth
dataset/: Dataset_README.md  generate_segment_npz.py
dataset/sample/: Set2001_Depth_0.exr  Set2001_Depth_1.exr  Set2001_Depth_2.exr  Set2001_Depth_3.exr  Set2001_Depth_4.exr  Set2001_Depth_5.exr  Set2001_Depth_6.exr  Set2001_Depth_7.exr  Set2002_Depth_0.exr  Set2002_Depth_1.exr  Set2002_Depth_2.exr  Set2002_Depth_3.exr  Set2002_Depth_4.exr  Set2002_Depth_5.exr  Set2002_Depth_6.exr  Set2002_Depth_7.exr  Set2003_Depth_0.exr  Set2003_Depth_1.exr  Set2003_Depth_2.exr  Set2003_Depth_3.exr  Set2003_Depth_4.exr  Set2003_Depth_5.exr  Set2003_Depth_6.exr  Set2003_Depth_7.exr
scripts/: eval.sh  preprocess.sh  train.sh  visualize.py
shadowcorr/: __init__.py  eval_app.py  preprocess_app.py  train_app.py
shadowcorr/cli/: __init__.py  main.py
shadowcorr/conf/: defaults.yaml  eval.yaml  preprocess.yaml  train.yaml
shadowcorr/logging_utils/: __init__.py
shadowcorr/models/: __init__.py  data.py  encoder.py  features.py  network.py
shadowcorr/pipeline/: __init__.py  early_stopping.py  evaluator.py  io.py  losses.py  metrics.py  postprocessing.py  sweep.py  train_one.py
shadowcorr/preprocess/: __init__.py  scene.py  voxel.py
